--- a/LA-Crime-Analysis.ipynb
+++ b/LA-Crime-Analysis.ipynb
@@ -1707,9 +1707,9 @@
    "metadata": {},
    "source": [
     "##### Inference:\n",
-    "When the schools are closed then there is high chances of crime in my area.\n",
+    "When the schools are closed then there are high chances of crime in my area.\n",
     "##### OR\n",
-    "When we observe high crimes in Southwest of Los Angeles, then it implies School (USC) is closed for vacation!"
+    "When we observe high crime in Southwest of Los Angeles, then it implies that USC is closed for vacation!"
    ]
   }
  ],
